--- a/test/fixtures/driver_feedbacks.yml
+++ b/test/fixtures/driver_feedbacks.yml
@@ -8,4 +8,21 @@ one:
 two:
   description: MyText
   driver_id: 
-  user_id: 
+  user_id:
+
+# == Schema Information
+#
+# Table name: driver_feedbacks
+#
+#  id          :integer          not null, primary key
+#  description :text
+#  driver_id   :integer
+#  user_id     :integer
+#  created_at  :datetime
+#  updated_at  :datetime
+#
+# Indexes
+#
+#  index_driver_feedbacks_on_driver_id  (driver_id)
+#  index_driver_feedbacks_on_user_id    (user_id)
+#
