--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -9,3 +9,20 @@ two:
   order_id: 
   dish_id: 
   quantity: 1
+
+# == Schema Information
+#
+# Table name: order_items
+#
+#  id         :integer          not null, primary key
+#  order_id   :integer
+#  dish_id    :integer
+#  quantity   :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+# Indexes
+#
+#  index_order_items_on_dish_id   (dish_id)
+#  index_order_items_on_order_id  (order_id)
+#
