--- a/test/fixtures/restaurants.yml
+++ b/test/fixtures/restaurants.yml
@@ -11,3 +11,16 @@ two:
   address: MyString
   phone: MyString
   description: MyText
+
+# == Schema Information
+#
+# Table name: restaurants
+#
+#  id          :integer          not null, primary key
+#  name        :string(255)
+#  address     :string(255)
+#  phone       :string(255)
+#  description :text
+#  created_at  :datetime
+#  updated_at  :datetime
+#
