--- a/test/fixtures/discounts.yml
+++ b/test/fixtures/discounts.yml
@@ -11,3 +11,20 @@ two:
   title: MyString
   restaurant_id: 
   percentage: 1.5
+
+# == Schema Information
+#
+# Table name: discounts
+#
+#  id            :integer          not null, primary key
+#  description   :text
+#  title         :string(255)
+#  restaurant_id :integer
+#  percentage    :float
+#  created_at    :datetime
+#  updated_at    :datetime
+#
+# Indexes
+#
+#  index_discounts_on_restaurant_id  (restaurant_id)
+#
