--- a/test/fixtures/drivers.yml
+++ b/test/fixtures/drivers.yml
@@ -10,4 +10,21 @@ two:
   name: MyString
   phone: MyString
   working_time: MyString
-  transportation_id: 
+  transportation_id:
+
+# == Schema Information
+#
+# Table name: drivers
+#
+#  id                :integer          not null, primary key
+#  name              :string(255)
+#  phone             :string(255)
+#  working_time      :string(255)
+#  transportation_id :integer
+#  created_at        :datetime
+#  updated_at        :datetime
+#
+# Indexes
+#
+#  index_drivers_on_transportation_id  (transportation_id)
+#
