--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -8,4 +8,20 @@ one:
 two:
   name: MyString
   address: MyString
-  location_type_id: 
+  location_type_id:
+
+# == Schema Information
+#
+# Table name: locations
+#
+#  id               :integer          not null, primary key
+#  name             :string(255)
+#  address          :string(255)
+#  location_type_id :integer
+#  created_at       :datetime
+#  updated_at       :datetime
+#
+# Indexes
+#
+#  index_locations_on_location_type_id  (location_type_id)
+#
