--- a/test/fixtures/restaurant_feedbacks.yml
+++ b/test/fixtures/restaurant_feedbacks.yml
@@ -8,4 +8,21 @@ one:
 two:
   content: MyText
   restaurant_id: 
-  user_id: 
+  user_id:
+
+# == Schema Information
+#
+# Table name: restaurant_feedbacks
+#
+#  id            :integer          not null, primary key
+#  content       :text
+#  restaurant_id :integer
+#  user_id       :integer
+#  created_at    :datetime
+#  updated_at    :datetime
+#
+# Indexes
+#
+#  index_restaurant_feedbacks_on_restaurant_id  (restaurant_id)
+#  index_restaurant_feedbacks_on_user_id        (user_id)
+#
